; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netlabel/extr_netlabel_cipso_v4.c_netlbl_cipsov4_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netlabel/extr_netlabel_cipso_v4.c_netlbl_cipsov4_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.genl_info = type { i32* }
%struct.netlbl_domhsh_walk_arg = type { i32, %struct.netlbl_audit* }
%struct.netlbl_audit = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@NLBL_CIPSOV4_A_DOI = common dso_local global i64 0, align 8
@netlbl_cipsov4_remove_cb = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@netlabel_mgmt_protocount = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.genl_info*)* @netlbl_cipsov4_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netlbl_cipsov4_remove(%struct.sk_buff* %0, %struct.genl_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.genl_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.netlbl_domhsh_walk_arg, align 8
  %8 = alloca %struct.netlbl_audit, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.genl_info* %1, %struct.genl_info** %5, align 8
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %6, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %13 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %14 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* @NLBL_CIPSOV4_A_DOI, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %2
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %55

23:                                               ; preds = %2
  %24 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %25 = call i32 @netlbl_netlink_auditinfo(%struct.sk_buff* %24, %struct.netlbl_audit* %8)
  %26 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %27 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i64, i64* @NLBL_CIPSOV4_A_DOI, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @nla_get_u32(i32 %31)
  %33 = getelementptr inbounds %struct.netlbl_domhsh_walk_arg, %struct.netlbl_domhsh_walk_arg* %7, i32 0, i32 0
  store i32 %32, i32* %33, align 8
  %34 = getelementptr inbounds %struct.netlbl_domhsh_walk_arg, %struct.netlbl_domhsh_walk_arg* %7, i32 0, i32 1
  store %struct.netlbl_audit* %8, %struct.netlbl_audit** %34, align 8
  %35 = load i32, i32* @netlbl_cipsov4_remove_cb, align 4
  %36 = call i32 @netlbl_domhsh_walk(i32* %9, i32* %10, i32 %35, %struct.netlbl_domhsh_walk_arg* %7)
  store i32 %36, i32* %6, align 4
  %37 = load i32, i32* %6, align 4
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %44, label %39

39:                                               ; preds = %23
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* @ENOENT, align 4
  %42 = sub nsw i32 0, %41
  %43 = icmp eq i32 %40, %42
  br i1 %43, label %44, label %53

44:                                               ; preds = %39, %23
  %45 = getelementptr inbounds %struct.netlbl_domhsh_walk_arg, %struct.netlbl_domhsh_walk_arg* %7, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @cipso_v4_doi_remove(i32 %46, %struct.netlbl_audit* %8)
  store i32 %47, i32* %6, align 4
  %48 = load i32, i32* %6, align 4
  %49 = icmp eq i32 %48, 0
  br i1 %49, label %50, label %52

50:                                               ; preds = %44
  %51 = call i32 @atomic_dec(i32* @netlabel_mgmt_protocount)
  br label %52

52:                                               ; preds = %50, %44
  br label %53

53:                                               ; preds = %52, %39
  %54 = load i32, i32* %6, align 4
  store i32 %54, i32* %3, align 4
  br label %55

55:                                               ; preds = %53, %20
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @netlbl_netlink_auditinfo(%struct.sk_buff*, %struct.netlbl_audit*) #1

declare dso_local i32 @nla_get_u32(i32) #1

declare dso_local i32 @netlbl_domhsh_walk(i32*, i32*, i32, %struct.netlbl_domhsh_walk_arg*) #1

declare dso_local i32 @cipso_v4_doi_remove(i32, %struct.netlbl_audit*) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
